ipc/ipdl/test/ipdl/ok/PemptyStruct.ipdl
struct empty { };

protocol PemptyStruct { child:  async __delete__(); };
